@@ -1,28 +1,29 @@
 package liquibase.change;
 
+import liquibase.changelog.ChangeSet;
+import liquibase.database.Database;
+import liquibase.exception.*;
+import liquibase.parser.core.ParsedNode;
+import liquibase.parser.core.ParsedNodeException;
+import liquibase.resource.ResourceAccessor;
+import liquibase.serializer.LiquibaseSerializable;
+import liquibase.serializer.core.string.StringChangeLogSerializer;
+import liquibase.sqlgenerator.SqlGeneratorFactory;
+import liquibase.statement.SqlStatement;
+import liquibase.structure.DatabaseObject;
+import liquibase.util.StringUtils;
+import liquibase.util.beans.PropertyUtils;
+
+import java.beans.IntrospectionException;
+import java.beans.PropertyDescriptor;
+import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Type;
 import java.util.*;
 
-import liquibase.changelog.ChangeSet;
-import liquibase.database.Database;
-import liquibase.parser.core.ParsedNode;
-import liquibase.parser.core.ParsedNodeException;
-import liquibase.serializer.LiquibaseSerializable;
-import liquibase.structure.DatabaseObject;
-import liquibase.exception.*;
-import liquibase.resource.ResourceAccessor;
-import liquibase.serializer.core.string.StringChangeLogSerializer;
-import liquibase.sqlgenerator.SqlGeneratorFactory;
-import liquibase.statement.SqlStatement;
-import liquibase.util.StringUtils;
-import liquibase.util.beans.PropertyUtils;
-
-import java.beans.PropertyDescriptor;
-import java.lang.reflect.Method;
-
 /**
- * Standard superclass to simplify {@link Change } implementations. You can implement Change directly, this class is purely for convenience but recommended.
+ * Standard superclass to simplify {@link Change } implementations. You can implement Change directly, this class is
+ * purely for convenience but recommended.
  * <p></p>
  * By default, this base class relies on annotations such as {@link DatabaseChange} and {@link DatabaseChangeProperty}
  * and delegating logic to the {@link liquibase.sqlgenerator.SqlGenerator} objects created to do the actual change work.
@@ -30,6 +31,7 @@ import java.lang.reflect.Method;
  */
 public abstract class AbstractChange implements Change {
 
+    protected static final String NODENAME_COLUMN = "column";
     private ResourceAccessor resourceAccessor;
 
     private ChangeSet changeSet;
@@ -60,7 +62,7 @@ public abstract class AbstractChange implements Change {
                 throw new UnexpectedLiquibaseException("No @DatabaseChange annotation for " + getClass().getName());
             }
 
-            Set<ChangeParameterMetaData> params = new HashSet<ChangeParameterMetaData>();
+            Set<ChangeParameterMetaData> params = new HashSet<>();
             for (PropertyDescriptor property : PropertyUtils.getInstance().getDescriptors(getClass())) {
                 if (isInvalidProperty(property)) {
                     continue;
@@ -69,33 +71,36 @@ public abstract class AbstractChange implements Change {
                 Method writeMethod = property.getWriteMethod();
                 if (readMethod == null) {
                     try {
-                        readMethod = this.getClass().getMethod("is" + StringUtils.upperCaseFirst(property.getName()));
-                    } catch (Exception ignore) {
+                        readMethod = this.getClass().getMethod(
+                            "is" + StringUtils.upperCaseFirst(property.getName())
+                        );
+                    } catch (NoSuchMethodException|SecurityException ignore) {
                         //it was worth a try
                     }
                 }
-                if (readMethod != null && writeMethod != null) {
+                if ((readMethod != null) && (writeMethod != null)) {
                     DatabaseChangeProperty annotation = readMethod.getAnnotation(DatabaseChangeProperty.class);
-                    if (annotation == null || annotation.isChangeProperty()) {
+                    if ((annotation == null) || annotation.isChangeProperty()) {
                         params.add(createChangeParameterMetadata(property.getDisplayName()));
                     }
                 }
 
             }
 
-            Map<String, String> notes = new HashMap<String, String>();
+            Map<String, String> notes = new HashMap<>();
             for (DatabaseChangeNote note : databaseChange.databaseNotes()) {
                 notes.put(note.database(), note.notes());
             }
 
-            return new ChangeMetaData(databaseChange.name(), databaseChange.description(), databaseChange.priority(), databaseChange.appliesTo(), notes, params);
-        } catch (Throwable e) {
+            return new ChangeMetaData(databaseChange.name(), databaseChange.description(), databaseChange.priority(),
+                databaseChange.appliesTo(), notes, params);
+        } catch (UnexpectedLiquibaseException|IntrospectionException e) {
             throw new UnexpectedLiquibaseException(e);
         }
     }
 
     protected boolean isInvalidProperty(PropertyDescriptor property) {
-        return property.getDisplayName().equals("metaClass");
+        return "metaClass".equals(property.getDisplayName());
     }
 
     /**
@@ -134,19 +139,22 @@ public abstract class AbstractChange implements Change {
             String description = createDescriptionMetaData(parameterName, changePropertyAnnotation);
             Map<String, Object> examples = createExampleValueMetaData(parameterName, changePropertyAnnotation);
             String since = createSinceMetaData(parameterName, changePropertyAnnotation);
-            SerializationType serializationType = createSerializationTypeMetaData(parameterName, changePropertyAnnotation);
+            SerializationType serializationType = createSerializationTypeMetaData(
+                parameterName, changePropertyAnnotation
+            );
             String[] requiredForDatabase = createRequiredDatabasesMetaData(parameterName, changePropertyAnnotation);
             String[] supportsDatabase = createSupportedDatabasesMetaData(parameterName, changePropertyAnnotation);
 
-
-            return new ChangeParameterMetaData(this, parameterName, displayName, description, examples, since, type, requiredForDatabase, supportsDatabase, mustEqualExisting, serializationType);
-        } catch (Exception e) {
+            return new ChangeParameterMetaData(this, parameterName, displayName, description, examples, since,
+                type, requiredForDatabase, supportsDatabase, mustEqualExisting, serializationType);
+        } catch (IntrospectionException|UnexpectedLiquibaseException|NoSuchMethodException|SecurityException e) {
             throw new UnexpectedLiquibaseException(e);
         }
     }
 
     /**
-     * Create the {@link ChangeParameterMetaData} "since" value. Uses the value on the DatabaseChangeProperty annotation or returns null as a default.
+     * Create the {@link ChangeParameterMetaData} "since" value. Uses the value on the DatabaseChangeProperty
+     * annotation or returns null as a default.
      */
     @SuppressWarnings("UnusedParameters")
     protected String createSinceMetaData(String parameterName, DatabaseChangeProperty changePropertyAnnotation) {
@@ -157,7 +165,8 @@ public abstract class AbstractChange implements Change {
     }
 
     /**
-     * Create the {@link ChangeParameterMetaData} "description" value. Uses the value on the DatabaseChangeProperty annotation or returns null as a default.
+     * Create the {@link ChangeParameterMetaData} "description" value. Uses the value on the DatabaseChangeProperty
+     * annotation or returns null as a default.
      */
     @SuppressWarnings("UnusedParameters")
     protected String createDescriptionMetaData(String parameterName, DatabaseChangeProperty changePropertyAnnotation) {
@@ -168,10 +177,14 @@ public abstract class AbstractChange implements Change {
     }
 
     /**
-     * Create the {@link ChangeParameterMetaData} "serializationType" value. Uses the value on the DatabaseChangeProperty annotation or returns {@link SerializationType}.NAMED_FIELD as a default.
+     * Create the {@link ChangeParameterMetaData} "serializationType" value. Uses the value on the
+     * DatabaseChangeProperty annotation or returns
+     * {@link liquibase.serializer.LiquibaseSerializable.SerializationType#NAMED_FIELD} as a default.
      */
     @SuppressWarnings("UnusedParameters")
-    protected SerializationType createSerializationTypeMetaData(String parameterName, DatabaseChangeProperty changePropertyAnnotation) {
+    protected liquibase.serializer.LiquibaseSerializable.SerializationType createSerializationTypeMetaData(
+        String parameterName, DatabaseChangeProperty changePropertyAnnotation
+    ) {
         if (changePropertyAnnotation == null) {
             return SerializationType.NAMED_FIELD;
         }
@@ -179,10 +192,13 @@ public abstract class AbstractChange implements Change {
     }
 
     /**
-     * Create the {@link ChangeParameterMetaData} "mustEqual" value. Uses the value on the DatabaseChangeProperty annotation or returns null as a default.
+     * Create the {@link ChangeParameterMetaData} "mustEqual" value. Uses the value on the DatabaseChangeProperty
+     * annotation or returns null as a default.
      */
     @SuppressWarnings("UnusedParameters")
-    protected String createMustEqualExistingMetaData(String parameterName, DatabaseChangeProperty changePropertyAnnotation) {
+    protected String createMustEqualExistingMetaData(
+        String parameterName, DatabaseChangeProperty changePropertyAnnotation
+    ) {
         if (changePropertyAnnotation == null) {
             return null;
         }
@@ -195,12 +211,14 @@ public abstract class AbstractChange implements Change {
      * Returns map with key=database short name, value=example. Use short-name "all" as the fallback.
      */
     @SuppressWarnings("UnusedParameters")
-    protected Map<String, Object> createExampleValueMetaData(String parameterName, DatabaseChangeProperty changePropertyAnnotation) {
+    protected Map<String, Object> createExampleValueMetaData(
+        String parameterName, DatabaseChangeProperty changePropertyAnnotation
+    ) {
         if (changePropertyAnnotation == null) {
             return null;
         }
 
-        Map<String, Object> examples = new HashMap<String, Object>();
+        Map<String, Object> examples = new HashMap<>();
         examples.put("all", StringUtils.trimToNull(changePropertyAnnotation.exampleValue()));
 
         return examples;
@@ -208,11 +226,14 @@ public abstract class AbstractChange implements Change {
 
     /**
      * Create the {@link ChangeParameterMetaData} "requiredDatabases" value.
-     * Uses the value on the DatabaseChangeProperty annotation or returns an array containing the string "COMPUTE" as a default.
-     * "COMPUTE" will cause ChangeParameterMetaData to attempt to determine the required databases based on the generated Statements
+     * Uses the value on the DatabaseChangeProperty annotation or returns an array containing the string "COMPUTE"
+     * as a default. "COMPUTE" will cause ChangeParameterMetaData to attempt to determine the required databases based
+     * on the generated Statements
      */
     @SuppressWarnings("UnusedParameters")
-    protected String[] createRequiredDatabasesMetaData(String parameterName, DatabaseChangeProperty changePropertyAnnotation) {
+    protected String[] createRequiredDatabasesMetaData(
+        String parameterName, DatabaseChangeProperty changePropertyAnnotation
+    ) {
         if (changePropertyAnnotation == null) {
             return new String[]{ChangeParameterMetaData.COMPUTE};
         } else {
@@ -222,11 +243,14 @@ public abstract class AbstractChange implements Change {
 
     /**
      * Create the {@link ChangeParameterMetaData} "supportedDatabase" value.
-     * Uses the value on the DatabaseChangeProperty annotation or returns an array containing the string "COMPUTE" as a default.
-     * "COMPUTE" will cause ChangeParameterMetaData to attempt to determine the required databases based on the generated Statements
+     * Uses the value on the DatabaseChangeProperty annotation or returns an array containing the string "COMPUTE"
+     * as a default. "COMPUTE" will cause ChangeParameterMetaData to attempt to determine the required databases
+     * based on the generated Statements
      */
     @SuppressWarnings("UnusedParameters")
-    protected String[] createSupportedDatabasesMetaData(String parameterName, DatabaseChangeProperty changePropertyAnnotation) {
+    protected String[] createSupportedDatabasesMetaData(
+        String parameterName, DatabaseChangeProperty changePropertyAnnotation
+    ) {
         if (changePropertyAnnotation == null) {
             return new String[]{ChangeParameterMetaData.COMPUTE};
         } else {
@@ -253,7 +277,9 @@ public abstract class AbstractChange implements Change {
     }
 
     /**
-     * Implementation delegates logic to the {@link liquibase.sqlgenerator.SqlGenerator#generateStatementsIsVolatile(Database) } method on the {@link SqlStatement} objects returned by {@link #generateStatements }.
+     * Implementation delegates logic to the
+     * {@link liquibase.sqlgenerator.SqlGenerator#generateStatementsIsVolatile(Database) } method on the
+     * {@link SqlStatement} objects returned by {@link #generateStatements }.
      * If zero or null SqlStatements are returned by generateStatements then this method returns false.
      */
     @Override
@@ -271,7 +297,9 @@ public abstract class AbstractChange implements Change {
     }
 
     /**
-     * Implementation delegates logic to the {@link liquibase.sqlgenerator.SqlGenerator#generateRollbackStatementsIsVolatile(Database) } method on the {@link SqlStatement} objects returned by {@link #generateStatements }
+     * Implementation delegates logic to the
+     * {@link liquibase.sqlgenerator.SqlGenerator#generateRollbackStatementsIsVolatile(Database) }
+     * method on the {@link SqlStatement} objects returned by {@link #generateStatements }
      * If no or null SqlStatements are returned by generateRollbackStatements then this method returns false.
      */
     @Override
@@ -292,7 +320,9 @@ public abstract class AbstractChange implements Change {
     }
 
     /**
-     * Implementation delegates logic to the {@link liquibase.sqlgenerator.SqlGenerator#supports(liquibase.statement.SqlStatement, liquibase.database.Database)} method on the {@link SqlStatement} objects returned by {@link #generateStatements }.
+     * Implementation delegates logic to the
+     * {@link liquibase.sqlgenerator.SqlGenerator#supports(liquibase.statement.SqlStatement, liquibase.database.Database)}
+     * method on the {@link SqlStatement} objects returned by {@link #generateStatements }.
      * If no or null SqlStatements are returned by generateStatements then this method returns true.
      * If {@link #generateStatementsVolatile(liquibase.database.Database)} returns true, we cannot call generateStatements and so assume true.
      */
@@ -314,9 +344,13 @@ public abstract class AbstractChange implements Change {
     }
 
     /**
-     * Implementation delegates logic to the {@link liquibase.sqlgenerator.SqlGenerator#warn(liquibase.statement.SqlStatement, liquibase.database.Database, liquibase.sqlgenerator.SqlGeneratorChain)} method on the {@link SqlStatement} objects returned by {@link #generateStatements }.
-     * If a generated statement is not supported for the given database, no warning will be added since that is a validation error.
-     * If no or null SqlStatements are returned by generateStatements then this method returns no warnings.
+     * Implementation delegates logic to the
+     * {@link liquibase.sqlgenerator.SqlGenerator#warn(liquibase.statement.SqlStatement, liquibase.database.Database,
+     * liquibase.sqlgenerator.SqlGeneratorChain)} method on the {@link SqlStatement} objects returned by
+     * {@link #generateStatements }.
+     * If a generated statement is not supported for the given database, no warning will be added since that is a
+     * validation error. If no or null SqlStatements are returned by generateStatements then this method returns no
+     * warnings.
      */
     @Override
     public Warnings warn(Database database) {
@@ -333,7 +367,10 @@ public abstract class AbstractChange implements Change {
             if (SqlGeneratorFactory.getInstance().supports(statement, database)) {
                 warnings.addAll(SqlGeneratorFactory.getInstance().warn(statement, database));
             } else if (statement.skipOnUnsupported()) {
-                warnings.addWarning(statement.getClass().getName() + " is not supported on " + database.getShortName() + ", but " + ChangeFactory.getInstance().getChangeMetaData(this).getName() + " will still execute");
+                warnings.addWarning(
+                    statement.getClass().getName() + " is not supported on " + database.getShortName() +
+                        ", but " + ChangeFactory.getInstance().getChangeMetaData(this).getName() +
+                        " will still execute");
             }
         }
 
@@ -342,7 +379,10 @@ public abstract class AbstractChange implements Change {
 
     /**
      * Implementation checks the ChangeParameterMetaData for declared required fields
-     * and also delegates logic to the {@link liquibase.sqlgenerator.SqlGenerator#validate(liquibase.statement.SqlStatement, liquibase.database.Database, liquibase.sqlgenerator.SqlGeneratorChain)}  method on the {@link SqlStatement} objects returned by {@link #generateStatements }.
+     * and also delegates logic to the
+     * {@link liquibase.sqlgenerator.SqlGenerator#validate(liquibase.statement.SqlStatement,
+     * liquibase.database.Database, liquibase.sqlgenerator.SqlGeneratorChain)}  method on the {@link SqlStatement}
+     * objects returned by {@link #generateStatements }.
      * If no or null SqlStatements are returned by generateStatements then this method returns no errors.
      * If there are no parameters than this method returns no errors
      */
@@ -350,20 +390,27 @@ public abstract class AbstractChange implements Change {
     public ValidationErrors validate(Database database) {
         ValidationErrors changeValidationErrors = new ValidationErrors();
 
-        for (ChangeParameterMetaData param : ChangeFactory.getInstance().getChangeMetaData(this).getParameters().values()) {
-            if (param.isRequiredFor(database) && param.getCurrentValue(this) == null) {
-                changeValidationErrors.addError(param.getParameterName() + " is required for " + ChangeFactory.getInstance().getChangeMetaData(this).getName() + " on " + database.getShortName());
+        // Record an error if a parameter is not set, but that parameter is required by database.
+        for (ChangeParameterMetaData param :
+            ChangeFactory.getInstance().getChangeMetaData(this).getParameters().values()) {
+            if (param.isRequiredFor(database) && (param.getCurrentValue(this) == null)) {
+                changeValidationErrors.addError(param.getParameterName() + " is required for " +
+                    ChangeFactory.getInstance().getChangeMetaData(this).getName() + " on " + database.getShortName());
             }
         }
+
+        // We cannot proceed to the next validation if we have missing parameters
         if (changeValidationErrors.hasErrors()) {
             return changeValidationErrors;
         }
 
+        // Record warnings if statements are unsupported on database
         if (!generateStatementsVolatile(database)) {
-			String unsupportedWarning = ChangeFactory.getInstance().getChangeMetaData(this).getName() + " is not supported on " + database.getShortName();
-			boolean sawUnsupportedError = false;
+            String unsupportedWarning = ChangeFactory.getInstance().getChangeMetaData(this).getName()
+                    + " is not supported on " + database.getShortName();
+            boolean sawUnsupportedError = false;
 
-			SqlStatement[] statements = generateStatements(database);
+            SqlStatement[] statements = generateStatements(database);
             if (statements != null) {
                 for (SqlStatement statement : statements) {
                     boolean supported = SqlGeneratorFactory.getInstance().supports(statement, database);
@@ -413,8 +460,8 @@ public abstract class AbstractChange implements Change {
 
     /*
      * Generates rollback statements from the inverse changes returned by createInverses().
-     * Throws RollbackImpossibleException if the changes created by createInverses() is not supported for the passed database.
-     *
+     * Throws RollbackImpossibleException if the changes created by createInverses() is not supported for the
+     * passed database.
      */
     private SqlStatement[] generateRollbackStatementsFromInverse(Database database) throws RollbackImpossibleException {
         Change[] inverses = createInverses();
@@ -422,12 +469,15 @@ public abstract class AbstractChange implements Change {
             throw new RollbackImpossibleException("No inverse to " + getClass().getName() + " created");
         }
 
-        List<SqlStatement> statements = new ArrayList<SqlStatement>();
+        List<SqlStatement> statements = new ArrayList<>();
 
         try {
             for (Change inverse : inverses) {
                 if (!inverse.supports(database)) {
-                    throw new RollbackImpossibleException(ChangeFactory.getInstance().getChangeMetaData(inverse).getName() + " is not supported on " + database.getShortName());
+                    throw new RollbackImpossibleException(
+                        ChangeFactory.getInstance().getChangeMetaData(inverse).getName() + " is not supported on " +
+                            database.getShortName()
+                    );
                 }
                 statements.addAll(Arrays.asList(inverse.generateStatements(database)));
             }
@@ -440,15 +490,25 @@ public abstract class AbstractChange implements Change {
 
     /**
      * Create inverse changes that can roll back this change. This method is intended
-     * to be overriden by Change implementations that have a logical inverse operation. Default implementation returns null.
+     * to be overriden by Change implementations that have a logical inverse operation. Default implementation
+     * returns null.
      * <p/>
      * If {@link #generateRollbackStatements(liquibase.database.Database)} is overridden, this method may not be called.
      *
-     * @return Return null if there is no corresponding inverse and therefore automatic rollback is not possible. Return an empty array to have a no-op rollback.
-     * @also #generateRollbackStatements #supportsRollback
+     * @return Return null if there is no corresponding inverse and therefore automatic rollback is not possible.
+     * Return an empty array to have a no-op rollback.
+     * @see #generateRollbackStatements #supportsRollback
      */
     protected Change[] createInverses() {
         return null;
+    }
+
+    /**
+     * @inheritDoc
+     */
+    @DatabaseChangeProperty(isChangeProperty = false)
+    public ResourceAccessor getResourceAccessor() {
+        return resourceAccessor;
     }
 
     /**
@@ -460,28 +520,23 @@ public abstract class AbstractChange implements Change {
     }
 
     /**
-     * @{inheritDoc}
-     */
-    @DatabaseChangeProperty(isChangeProperty = false)
-    public ResourceAccessor getResourceAccessor() {
-        return resourceAccessor;
-    }
-
-    /**
-     * Implementation delegates logic to the {@link liquibase.sqlgenerator.SqlGeneratorFactory#getAffectedDatabaseObjects(liquibase.statement.SqlStatement, liquibase.database.Database)}  method on the {@link SqlStatement} objects returned by {@link #generateStatements }
+     * Implementation delegates logic to the
+     * {@link liquibase.sqlgenerator.SqlGeneratorFactory#getAffectedDatabaseObjects(liquibase.statement.SqlStatement,
+     * liquibase.database.Database)} method on the {@link SqlStatement} objects returned by {@link #generateStatements }
      * Returns empty set if change is not supported for the passed database
      */
     @Override
     public Set<DatabaseObject> getAffectedDatabaseObjects(Database database) {
         if (this.generateStatementsVolatile(database)) {
-            return new HashSet<DatabaseObject>();
+            return new HashSet<>();
         }
-        Set<DatabaseObject> affectedObjects = new HashSet<DatabaseObject>();
+        Set<DatabaseObject> affectedObjects = new HashSet<>();
         SqlStatement[] statements = generateStatements(database);
 
         if (statements != null) {
             for (SqlStatement statement : statements) {
-                affectedObjects.addAll(SqlGeneratorFactory.getInstance().getAffectedDatabaseObjects(statement, database));
+                affectedObjects.addAll(SqlGeneratorFactory.getInstance()
+                    .getAffectedDatabaseObjects(statement, database));
             }
         }
 
@@ -498,7 +553,8 @@ public abstract class AbstractChange implements Change {
 
     @Override
     public Object getSerializableFieldValue(String field) {
-        ChangeParameterMetaData fieldMetaData = ChangeFactory.getInstance().getChangeMetaData(this).getParameters().get(field);
+        ChangeParameterMetaData fieldMetaData = ChangeFactory.getInstance().getChangeMetaData(this)
+            .getParameters().get(field);
         if (fieldMetaData == null) {
             return null;
         }
@@ -542,8 +598,10 @@ public abstract class AbstractChange implements Change {
                     if (param.getDataTypeClassParameters().length == 1) {
                         Class collectionType = (Class) param.getDataTypeClassParameters()[0];
                         if (ColumnConfig.class.isAssignableFrom(collectionType)) {
-                            List<ParsedNode> columnNodes = new ArrayList<ParsedNode>(parsedNode.getChildren(null, param.getParameterName()));
-                            columnNodes.addAll(parsedNode.getChildren(null, "column"));
+                            List<ParsedNode> columnNodes = new ArrayList<>(
+                                parsedNode.getChildren(null, param.getParameterName())
+                            );
+                            columnNodes.addAll(parsedNode.getChildren(null, NODENAME_COLUMN));
 
                             Object nodeValue = parsedNode.getValue();
                             if (nodeValue instanceof ParsedNode) {
@@ -556,11 +614,10 @@ public abstract class AbstractChange implements Change {
                                 }
                             }
 
-
                             for (ParsedNode child : columnNodes) {
-                                if (child.getName().equals("column") || child.getName().equals("columns")) {
-                                    List<ParsedNode> columnChildren = child.getChildren(null, "column");
-                                    if (columnChildren != null && columnChildren.size() > 0) {
+                                if (NODENAME_COLUMN.equals(child.getName()) || "columns".equals(child.getName())) {
+                                    List<ParsedNode> columnChildren = child.getChildren(null, NODENAME_COLUMN);
+                                    if ((columnChildren != null) && !columnChildren.isEmpty()) {
                                         for (ParsedNode columnChild : columnChildren) {
                                             ColumnConfig columnConfig = createEmptyColumnConfig(collectionType);
                                             columnConfig.load(columnChild, resourceAccessor);
@@ -573,43 +630,49 @@ public abstract class AbstractChange implements Change {
                                     }
                                 }
                             }
-                        } else if (LiquibaseSerializable.class.isAssignableFrom(collectionType)) {
-                            if(!collectionType.isInterface()
-                                    && !Modifier.isAbstract(collectionType.getModifiers())) {
+                        } else if (
+                            (LiquibaseSerializable.class.isAssignableFrom(collectionType))
+                            && (!collectionType.isInterface())
+                            && (!Modifier.isAbstract(collectionType.getModifiers()))
+                        ) {
+                            String elementName = ((LiquibaseSerializable) collectionType.getConstructor().newInstance())
+                                .getSerializedObjectName();
+                            List<ParsedNode> nodes = new ArrayList<>(
+                                 parsedNode.getChildren(null, param.getParameterName())
+                            );
+                            if (!elementName.equals(param.getParameterName())) {
+                                nodes.addAll(parsedNode.getChildren(null, elementName));
+                            }
 
-                                 String elementName = ((LiquibaseSerializable) collectionType.newInstance()).getSerializedObjectName();
-                                 List<ParsedNode> nodes = new ArrayList<ParsedNode>(parsedNode.getChildren(null, param.getParameterName()));
-                                if (!elementName.equals(param.getParameterName())) {
-                                    nodes.addAll(parsedNode.getChildren(null, elementName));
+                            Object nodeValue = parsedNode.getValue();
+                            if (nodeValue instanceof ParsedNode) {
+                                nodes.add((ParsedNode) nodeValue);
+                            } else if (nodeValue instanceof Collection) {
+                                for (Object nodeValueChild : ((Collection) nodeValue)) {
+                                    if (nodeValueChild instanceof ParsedNode) {
+                                        nodes.add((ParsedNode) nodeValueChild);
+                                    }
                                 }
+                            }
 
-                                Object nodeValue = parsedNode.getValue();
-                                 if (nodeValue instanceof ParsedNode) {
-                                     nodes.add((ParsedNode) nodeValue);
-                                 } else if (nodeValue instanceof Collection) {
-                                     for (Object nodeValueChild : ((Collection) nodeValue)) {
-                                         if (nodeValueChild instanceof ParsedNode) {
-                                             nodes.add((ParsedNode) nodeValueChild);
-                                         }
-                                     }
-                                 }
-
-                                 for (ParsedNode node : nodes) {
-                                     if (node.getName().equals(elementName) || node.getName().equals(param.getParameterName())) {
-                                         List<ParsedNode> childNodes = node.getChildren(null, elementName);
-                                         if (childNodes != null && childNodes.size() > 0) {
-                                             for (ParsedNode childNode : childNodes) {
-                                                 LiquibaseSerializable childObject = (LiquibaseSerializable) collectionType.newInstance();
-                                                 childObject.load(childNode, resourceAccessor);
-                                                 ((Collection) param.getCurrentValue(this)).add(childObject);
-                                             }
-                                         } else {
-                                             LiquibaseSerializable childObject = (LiquibaseSerializable) collectionType.newInstance();
-                                             childObject.load(node, resourceAccessor);
-                                             ((Collection) param.getCurrentValue(this)).add(childObject);
-                                         }
-                                     }
-                                 }
+                            for (ParsedNode node : nodes) {
+                                if (node.getName().equals(elementName)
+                                   || node.getName().equals(param.getParameterName())) {
+                                    List<ParsedNode> childNodes = node.getChildren(null, elementName);
+                                    if ((childNodes != null) && !childNodes.isEmpty()) {
+                                        for (ParsedNode childNode : childNodes) {
+                                            LiquibaseSerializable childObject =
+                                                (LiquibaseSerializable)collectionType.getConstructor().newInstance();
+                                            childObject.load(childNode, resourceAccessor);
+                                            ((Collection) param.getCurrentValue(this)).add(childObject);
+                                        }
+                                    } else {
+                                        LiquibaseSerializable childObject =
+                                            (LiquibaseSerializable) collectionType.getConstructor().newInstance();
+                                        childObject.load(node, resourceAccessor);
+                                        ((Collection) param.getCurrentValue(this)).add(childObject);
+                                    }
+                               }
                             }
                         }
                     }
@@ -620,27 +683,26 @@ public abstract class AbstractChange implements Change {
                         try {
                             ParsedNode child = parsedNode.getChild(null, param.getParameterName());
                             if (child != null) {
-                                LiquibaseSerializable serializableChild = (LiquibaseSerializable) param.getDataTypeClass().newInstance();
+                                LiquibaseSerializable serializableChild =
+                                    (LiquibaseSerializable) param.getDataTypeClass().getConstructor().newInstance();
                                 serializableChild.load(child, resourceAccessor);
                                 param.setValue(this, serializableChild);
                             }
-                        } catch (InstantiationException e) {
-                            throw new UnexpectedLiquibaseException(e);
-                        } catch (IllegalAccessException e) {
+                        } catch (ReflectiveOperationException e) {
                             throw new UnexpectedLiquibaseException(e);
                         }
                     }
                 } else {
-                    Object childValue = parsedNode.getChildValue(null, param.getParameterName(), param.getDataTypeClass());
-                    if (childValue == null && param.getSerializationType() == SerializationType.DIRECT_VALUE) {
+                    Object childValue = parsedNode.getChildValue(
+                        null, param.getParameterName(), param.getDataTypeClass()
+                    );
+                    if ((childValue == null) && (param.getSerializationType() == SerializationType.DIRECT_VALUE)) {
                         childValue = parsedNode.getValue();
                     }
                     param.setValue(this, childValue);
                 }
             }
-        } catch (InstantiationException e) {
-            throw new UnexpectedLiquibaseException(e);
-        } catch (IllegalAccessException e) {
+        } catch (ReflectiveOperationException e) {
             throw new UnexpectedLiquibaseException(e);
         }
         customLoadLogic(parsedNode, resourceAccessor);
@@ -651,11 +713,13 @@ public abstract class AbstractChange implements Change {
         }
     }
 
-    protected ColumnConfig createEmptyColumnConfig(Class collectionType) throws InstantiationException, IllegalAccessException {
-        return (ColumnConfig) collectionType.newInstance();
+    protected ColumnConfig createEmptyColumnConfig(Class collectionType)
+        throws ReflectiveOperationException {
+        return (ColumnConfig) collectionType.getConstructor().newInstance();
     }
 
-    protected void customLoadLogic(ParsedNode parsedNode, ResourceAccessor resourceAccessor) throws ParsedNodeException {
+    protected void customLoadLogic(ParsedNode parsedNode, ResourceAccessor resourceAccessor)
+        throws ParsedNodeException {
 
     }
 
@@ -683,7 +747,7 @@ public abstract class AbstractChange implements Change {
                     returnList.add(objValue);
                 }
             }
-            if (((Collection) value).size() == 0) {
+            if (((Collection) value).isEmpty()) {
                 return null;
             } else {
                 return returnList;
@@ -700,10 +764,12 @@ public abstract class AbstractChange implements Change {
         ChangeMetaData metaData = ChangeFactory.getInstance().getChangeMetaData(this);
         String description = metaData.getName();
 
-        SortedSet<String> names = new TreeSet<String>();
+        SortedSet<String> names = new TreeSet<>();
         for (Map.Entry<String, ChangeParameterMetaData> entry : metaData.getParameters().entrySet()) {
             String lowerCaseKey = entry.getKey().toLowerCase();
-            if (lowerCaseKey.endsWith("name") && !lowerCaseKey.contains("schema") && !lowerCaseKey.contains("catalog")) {
+            if (lowerCaseKey.endsWith("name")
+                && !lowerCaseKey.contains("schema")
+                && !lowerCaseKey.contains("catalog")) {
                 Object currentValue = entry.getValue().getCurrentValue(this);
                 if (currentValue != null) {
                     names.add(entry.getKey()+"="+ currentValue);
@@ -711,7 +777,7 @@ public abstract class AbstractChange implements Change {
             }
         }
 
-        if (names.size() > 0) {
+        if (!names.isEmpty()) {
             description += " "+StringUtils.join(names, ", ");
         }
 
