@@ -1,8 +1,8 @@
 package liquibase.change.custom;
 
 import liquibase.change.AbstractChange;
-import liquibase.change.DatabaseChange;
 import liquibase.change.ChangeMetaData;
+import liquibase.change.DatabaseChange;
 import liquibase.change.DatabaseChangeProperty;
 import liquibase.database.Database;
 import liquibase.exception.*;
@@ -22,7 +22,8 @@ import java.util.*;
  * @see liquibase.change.custom.CustomTaskChange
  */
 @DatabaseChange(name="customChange",
-        description = "Although Liquibase tries to provide a wide range of database refactorings, there are times you may want to create your own custom refactoring class.\n" +
+    description = "Although Liquibase tries to provide a wide range of database refactorings, there are times you may" +
+        " want to create your own custom refactoring class.\n" +
                 "\n" +
                 "To create your own custom refactoring, simply create a class that implements the liquibase.change.custom.CustomSqlChange or liquibase.change.custom.CustomTaskChange interface and use the <custom> tag in your change set.\n" +
                 "\n" +
@@ -39,13 +40,13 @@ public class CustomChangeWrapper extends AbstractChange {
     
     private String className;
 
-    private SortedSet<String> params = new TreeSet<String>();
+    private SortedSet<String> params = new TreeSet<>();
 
-    private Map<String, String> paramValues = new HashMap<String, String>();
+    private Map<String, String> paramValues = new HashMap<>();
 
     private ClassLoader classLoader;
 
-    private boolean configured = false;
+    private boolean configured;
 
     @Override
     public boolean generateStatementsVolatile(Database database) {
@@ -72,24 +73,29 @@ public class CustomChangeWrapper extends AbstractChange {
         this.classLoader = classLoader;
     }
 
+
+
     /**
      * Specify the name of the class to use as the CustomChange. This method instantiates the class using {@link #getClassLoader()} or fallback methods
      * and assigns it to {@link #getCustomChange()}.
      * {@link #setClassLoader(ClassLoader)} must be called before this method. The passed class is constructed, but no parameters are set. They are set in {@link liquibase.change.Change#generateStatements(liquibase.database.Database)}
      */
     public CustomChangeWrapper setClass(String className) throws CustomChangeException {
+        if (className == null) {
+            return this;
+        }
         if (classLoader == null) {
             throw new CustomChangeException("CustomChangeWrapper classLoader not set");
         }
         this.className = className;
             try {
                 try {
-                    customChange = (CustomChange) Class.forName(className, true, classLoader).newInstance();
+                    customChange = (CustomChange) Class.forName(className, true, classLoader).getConstructor().newInstance();
                 } catch (ClassCastException e) { //fails in Ant in particular
                     try {
-                        customChange = (CustomChange) Thread.currentThread().getContextClassLoader().loadClass(className).newInstance();
+                        customChange = (CustomChange) Thread.currentThread().getContextClassLoader().loadClass(className).getConstructor().newInstance();
                     } catch (ClassNotFoundException e1) {
-                        customChange = (CustomChange) Class.forName(className).newInstance();
+                        customChange = (CustomChange) Class.forName(className).getConstructor().newInstance();
                     }
                 }
         } catch (Exception e) {
@@ -100,8 +106,7 @@ public class CustomChangeWrapper extends AbstractChange {
     }
 
     /**
-     * Return the name of the custom class set in {@link #setClass(String)}
-     * @return
+     * Returns the name of the custom class set in {@link #setClass(String)}
      */
     @DatabaseChangeProperty(description = "Name class that implements the custom change.")
     public String getClassName() {
@@ -147,7 +152,7 @@ public class CustomChangeWrapper extends AbstractChange {
 
         try {
             return customChange.validate(database);
-        } catch (Throwable e) {
+        } catch (Exception e) {
             return new ValidationErrors().addError("Exception thrown calling "+getClassName()+".validate():"+ e.getMessage());
         }
     }
@@ -171,9 +176,7 @@ public class CustomChangeWrapper extends AbstractChange {
     public SqlStatement[] generateStatements(Database database) {
         SqlStatement[] statements = null;
         try {
-            if (!configured) {
-                configureCustomChange();
-            }
+            configureCustomChange();
             if (customChange instanceof CustomSqlChange) {
                 statements = ((CustomSqlChange) customChange).generateStatements(database);
             } else if (customChange instanceof CustomTaskChange) {
@@ -202,9 +205,7 @@ public class CustomChangeWrapper extends AbstractChange {
     public SqlStatement[] generateRollbackStatements(Database database) throws RollbackImpossibleException {
         SqlStatement[] statements = null;
         try {
-            if (!configured) {
-                configureCustomChange();
-            }
+            configureCustomChange();
             if (customChange instanceof CustomSqlRollback) {
                 statements = ((CustomSqlRollback) customChange).generateRollbackStatements(database);
             } else if (customChange instanceof CustomTaskRollback) {
@@ -231,7 +232,7 @@ public class CustomChangeWrapper extends AbstractChange {
      */
     @Override
     public boolean supportsRollback(Database database) {
-        return customChange instanceof CustomSqlRollback || customChange instanceof CustomTaskRollback;
+        return (customChange instanceof CustomSqlRollback) || (customChange instanceof CustomTaskRollback);
     }
 
     /**
@@ -239,16 +240,28 @@ public class CustomChangeWrapper extends AbstractChange {
      */
     @Override
     public String getConfirmationMessage() {
+        try {
+            configureCustomChange();
+        } catch (CustomChangeException e) {
+            throw new UnexpectedLiquibaseException(e);
+        }
+
         return customChange.getConfirmationMessage();
     }
 
     private void configureCustomChange() throws CustomChangeException {
+        if (configured) {
+            return;
+        }
+
         try {
             for (String param : params) {
                 ObjectUtil.setProperty(customChange, param, paramValues.get(param));
             }
             customChange.setFileOpener(getResourceAccessor());
             customChange.setUp();
+
+            configured = true;
         } catch (Exception e) {
             throw new CustomChangeException(e);
         }
@@ -256,29 +269,31 @@ public class CustomChangeWrapper extends AbstractChange {
 
     @Override
     public SerializationType getSerializableFieldType(String field) {
-        if (field.equals("class")) {
-            return SerializationType.NAMED_FIELD;
-        } else if (field.equals("param")) {
-            return SerializationType.NESTED_OBJECT;
-        } else {
-            throw new UnexpectedLiquibaseException("Unexpected CustomChangeWrapper field "+field);
+        switch (field) {
+            case "class":
+                return SerializationType.NAMED_FIELD;
+            case "param":
+                return SerializationType.NESTED_OBJECT;
+            default:
+                throw new UnexpectedLiquibaseException("Unexpected CustomChangeWrapper field " + field);
         }
     }
 
     @Override
     public Object getSerializableFieldValue(String field) {
-        if (field.equals("class")) {
-            return getClassName();
-        } else if (field.equals("param")) {
-            return this.paramValues;
-        } else {
-            throw new UnexpectedLiquibaseException("Unexpected CustomChangeWrapper field "+field);
+        switch (field) {
+            case "class":
+                return getClassName();
+            case "param":
+                return this.paramValues;
+            default:
+                throw new UnexpectedLiquibaseException("Unexpected CustomChangeWrapper field " + field);
         }
     }
 
     @Override
     public Set<String> getSerializableFields() {
-        return new HashSet<String>(Arrays.asList("class", "param"));
+        return new HashSet<>(Arrays.asList("class", "param"));
     }
 
     @Override
@@ -317,13 +332,13 @@ public class CustomChangeWrapper extends AbstractChange {
 
         CustomChange customChange = null;
         try {
-            customChange = (CustomChange) Class.forName(className, false, resourceAccessor.toClassLoader()).newInstance();
+            customChange = (CustomChange) Class.forName(className, false, resourceAccessor.toClassLoader()).getConstructor().newInstance();
         } catch (Exception e) {
             throw new UnexpectedLiquibaseException(e);
         }
         for (ParsedNode node : parsedNode.getChildren()) {
             Object value = node.getValue();
-            if (value != null && ObjectUtil.hasProperty(customChange, node.getName())) {
+            if ((value != null) && ObjectUtil.hasProperty(customChange, node.getName())) {
                 this.setParam(node.getName(), value.toString());
             }
         }
