@@ -11,9 +11,9 @@ public class ChangeLogHistoryServiceFactory {
 
     private static ChangeLogHistoryServiceFactory instance;
 
-    private List<ChangeLogHistoryService> registry = new ArrayList<ChangeLogHistoryService>();
+    private List<ChangeLogHistoryService> registry = new ArrayList<>();
 
-    private Map<Database, ChangeLogHistoryService> services = new ConcurrentHashMap<Database, ChangeLogHistoryService>();
+    private Map<Database, ChangeLogHistoryService> services = new ConcurrentHashMap<>();
 
     public static synchronized ChangeLogHistoryServiceFactory getInstance() {
         if (instance == null) {
@@ -25,7 +25,7 @@ public class ChangeLogHistoryServiceFactory {
     /**
      * Set the instance used by this singleton. Used primarily for testing.
      */
-    public static void setInstance(ChangeLogHistoryServiceFactory changeLogHistoryServiceFactory) {
+    public static synchronized void setInstance(ChangeLogHistoryServiceFactory changeLogHistoryServiceFactory) {
         ChangeLogHistoryServiceFactory.instance = changeLogHistoryServiceFactory;
     }
 
@@ -56,7 +56,7 @@ public class ChangeLogHistoryServiceFactory {
             if (services.containsKey(database)) {
                 return services.get(database);
             }
-            SortedSet<ChangeLogHistoryService> foundServices = new TreeSet<ChangeLogHistoryService>(new Comparator<ChangeLogHistoryService>() {
+            SortedSet<ChangeLogHistoryService> foundServices = new TreeSet<>(new Comparator<ChangeLogHistoryService>() {
                 @Override
                 public int compare(ChangeLogHistoryService o1, ChangeLogHistoryService o2) {
                     return -1 * Integer.valueOf(o1.getPriority()).compareTo(o2.getPriority());
@@ -69,8 +69,9 @@ public class ChangeLogHistoryServiceFactory {
                 }
             }
 
-            if (foundServices.size() == 0) {
-                throw new UnexpectedLiquibaseException("Cannot find ChangeLogHistoryService for " + database.getShortName());
+            if (foundServices.isEmpty()) {
+                throw new UnexpectedLiquibaseException("Cannot find ChangeLogHistoryService for " +
+                    database.getShortName());
             }
 
             try {
@@ -79,7 +80,7 @@ public class ChangeLogHistoryServiceFactory {
                 ChangeLogHistoryService service;
                 try {
                     aClass.getConstructor();
-                    service = aClass.newInstance();
+                    service = aClass.getConstructor().newInstance();
                     service.setDatabase(database);
                 } catch (NoSuchMethodException e) {
                     // must have been manually added to the registry and so already configured.
