@@ -12,8 +12,9 @@ import liquibase.database.jvm.JdbcConnection;
 import liquibase.exception.DatabaseException;
 import liquibase.exception.LockException;
 import liquibase.executor.ExecutorService;
+import liquibase.logging.LogService;
+import liquibase.logging.LogType;
 import liquibase.test.TestContext;
-
 public class LockServiceExecuteTest {
 
     @Before
@@ -31,12 +32,26 @@ public class LockServiceExecuteTest {
                 try {
                     statement = ((JdbcConnection) database.getConnection()).getUnderlyingConnection().createStatement();
                     try {
-                        statement.execute("drop table " + database.escapeTableName(database.getLiquibaseCatalogName(), database.getLiquibaseSchemaName(), database.getDatabaseChangeLogTableName()));
+                        String sql = "DROP TABLE " +
+                                database.escapeTableName(
+                                        database.getLiquibaseCatalogName(),
+                                        database.getLiquibaseSchemaName(),
+                                        database.getDatabaseChangeLogTableName()
+                                );
+                        LogService.getLog(getClass()).info(LogType.WRITE_SQL, sql);
+                        statement.execute(sql);
                     } catch (Exception e) {
                         //ok
                     }
                     try {
-                        statement.execute("drop table " + database.escapeTableName(database.getLiquibaseCatalogName(), database.getLiquibaseSchemaName(), database.getDatabaseChangeLogLockTableName()));
+                        String sql = "DROP TABLE " +
+                                database.escapeTableName(
+                                        database.getLiquibaseCatalogName(),
+                                        database.getLiquibaseSchemaName(),
+                                        database.getDatabaseChangeLogLockTableName()
+                                );
+                        LogService.getLog(getClass()).info(LogType.WRITE_SQL, sql);
+                        statement.execute(sql);
                     } catch (Exception e) {
                         //ok
                     }
@@ -185,7 +200,7 @@ public class LockServiceExecuteTest {
 //
 //                        database.commit();
 //
-////                        Database clearDatabase = database.getClass().newInstance();
+////                        Database clearDatabase = database.getClass().getConstructor().newInstance();
 ////                        clearDatabase.setConnection(database.getConnection());
 //
 //                        Executor originalTemplate = ExecutorService.getInstance().getExecutor(database);
